--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
+    <!--app-->
     <string name="app_name">玩转水印</string>
+    <string name="app_slogan">玩出你的专属</string>
+
+    <!--water mark-->
     <string name="hint_link_msg">复制视频分享链接粘贴到这里～</string>
     <string name="video_link">视频链接</string>
+
 </resources>
